fix: no more double-scrollbars

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -36,8 +36,6 @@
 
 html {
   box-sizing: border-box;
-  font-size: 16px;
-  overflow: hidden;
 }
 
 *,
